--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "pySROC"
+name = "sroc"
 version = "0.1.0"
-description = "Straight Rectangles on Canvas for Python"
+description = "Straight Rectangles on Canvas"
 authors = ["Giovanni Cascione <ing.cascione@gmail.com>"]
 license = "GPL-3.0"
 readme = "README.md"
@@ -15,11 +15,6 @@ numpy = "^1.21.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^6.2"
-
-[tool.poetry.packages]
-packages = [
-    { include = "pySROC" }
-]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
